# mr_dict

./: .gitignore  CMakeLists.txt  README.md
include/mr_dict/: dict.h
src/: CMakeLists.txt  atomicvar.h  dict.c  mt19937-64.c  zmalloc.c
tests/: CMakeLists.txt  dicttest.c
